compiler/y.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: initial_declaration
    2                 | translation_unit definition_or_statement

    3 initial_declaration: /* empty */
    4                    | require_list rename_list
    5                    | require_list
    6                    | rename_list
    7                    | lib_function

    8 require_list: require_declaration
    9             | require_list require_declaration

   10 require_declaration: REQUIRE package_name CR

   11 package_name: IDENTIFIER
   12             | package_name DOT IDENTIFIER

   13 rename_list: rename_declaration
   14            | rename_list rename_declaration

   15 rename_declaration: RENAME package_name IDENTIFIER CR

   16 definition_or_statement: function_definition
   17                        | class_definition
   18                        | statement
   19                        | delegate_definition
   20                        | enum_definition
   21                        | const_definition

   22 basic_type_specifier: VOID_T
   23                     | BOOLEAN_T
   24                     | INT_T
   25                     | DOUBLE_T
   26                     | STRING_T
   27                     | VARIENT_T
   28                     | NATIVE_POINTER_T
   29                     | DELEGATE

   30 identifier_type_specifier: IDENTIFIER

   31 array_type_specifier: basic_type_specifier LB RB
   32                     | IDENTIFIER LB RB
   33                     | array_type_specifier LB RB

   34 type_specifier: basic_type_specifier
   35               | array_type_specifier
   36               | identifier_type_specifier

   37 $@1: /* empty */

   38 lib_function: LIB IDENTIFIER $@1 CR lib_function_declaration_list END

   39 lib_function_declaration_list: /* empty */
   40                              | lib_function_declaration_list function_declaration
   41                              | lib_function_declaration_list class_definition

   42 function_declaration: DECLARE FUNCTION IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause CR
   43                     | DECLARE FUNCTION IDENTIFIER LP apostrophe RP AS type_specifier throws_clause CR
   44                     | DECLARE BSUB IDENTIFIER LP parameter_list apostrophe RP throws_clause CR
   45                     | DECLARE BSUB IDENTIFIER LP apostrophe RP throws_clause CR

   46 function_definition: FUNCTION IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause myblock
   47                    | FUNCTION IDENTIFIER LP apostrophe RP AS type_specifier throws_clause myblock
   48                    | BSUB IDENTIFIER LP parameter_list apostrophe RP throws_clause myblock
   49                    | BSUB IDENTIFIER LP apostrophe RP throws_clause myblock
   50                    | function_declaration

   51 parameter_list: IDENTIFIER AS type_specifier
   52               | parameter_list COMMA IDENTIFIER AS type_specifier

   53 argument_list: assignment_expression
   54              | argument_list COMMA assignment_expression

   55 statement_list: statement
   56               | statement_list statement

   57 expression: assignment_expression
   58           | expression COMMA assignment_expression

   59 assignment_expression: logical_or_expression
   60                      | primary_expression assignment_operator assignment_expression

   61 assignment_operator: ASSIGN_T
   62                    | ADD_ASSIGN_T
   63                    | SUB_ASSIGN_T
   64                    | MUL_ASSIGN_T
   65                    | DIV_ASSIGN_T
   66                    | MOD_ASSIGN_T

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression LOGICAL_OR logical_and_expression

   69 logical_and_expression: equality_expression
   70                       | logical_and_expression LOGICAL_AND equality_expression

   71 equality_expression: relational_expression
   72                    | equality_expression EQ relational_expression
   73                    | equality_expression NE relational_expression

   74 relational_expression: additive_expression
   75                      | relational_expression GT additive_expression
   76                      | relational_expression GE additive_expression
   77                      | relational_expression LT additive_expression
   78                      | relational_expression LE additive_expression

   79 additive_expression: multiplicative_expression
   80                    | additive_expression ADD multiplicative_expression
   81                    | additive_expression SUB multiplicative_expression

   82 multiplicative_expression: unary_expression
   83                          | multiplicative_expression MUL unary_expression
   84                          | multiplicative_expression DIV unary_expression
   85                          | multiplicative_expression MOD unary_expression
   86                          | multiplicative_expression BIT_AND unary_expression
   87                          | multiplicative_expression BIT_OR unary_expression
   88                          | multiplicative_expression BIT_XOR unary_expression

   89 unary_expression: postfix_expression
   90                 | SUB unary_expression
   91                 | EXCLAMATION unary_expression
   92                 | BIT_NOT unary_expression

   93 postfix_expression: primary_expression
   94                   | primary_expression INCREMENT
   95                   | primary_expression DECREMENT
   96                   | primary_expression INSTANCEOF type_specifier

   97 primary_expression: primary_no_new_array
   98                   | array_creation
   99                   | IDENTIFIER
  100                   | AUTOVAR

  101 primary_no_new_array: primary_no_new_array LB expression RB
  102                     | IDENTIFIER LB expression RB
  103                     | primary_expression DOT IDENTIFIER
  104                     | primary_expression LP argument_list RP
  105                     | primary_expression LP RP
  106                     | LP expression RP
  107                     | primary_expression DOWN_CAST_BEGIN type_specifier DOWN_CAST_END
  108                     | INT_LITERAL
  109                     | DOUBLE_LITERAL
  110                     | STRING_LITERAL
  111                     | REGEXP_LITERAL
  112                     | TRUE_T
  113                     | FALSE_T
  114                     | NULL_T
  115                     | array_literal
  116                     | THIS_T
  117                     | SUPER_T
  118                     | NEW DELEGATE LP RP
  119                     | NEW IDENTIFIER LP RP
  120                     | NEW IDENTIFIER LP argument_list RP
  121                     | NEW IDENTIFIER DOT IDENTIFIER LP RP
  122                     | NEW IDENTIFIER DOT IDENTIFIER LP argument_list RP

  123 array_literal: LC expression_list RC
  124              | LC expression_list COMMA RC

  125 array_creation: NEW basic_type_specifier dimension_expression_list
  126               | NEW basic_type_specifier dimension_expression_list dimension_list
  127               | NEW identifier_type_specifier dimension_expression_list
  128               | NEW identifier_type_specifier dimension_expression_list dimension_list

  129 dimension_expression_list: dimension_expression
  130                          | dimension_expression_list dimension_expression

  131 dimension_expression: LB expression RB

  132 dimension_list: LB RB
  133               | dimension_list LB RB

  134 expression_list: /* empty */
  135                | assignment_expression
  136                | expression_list COMMA assignment_expression

  137 statement: expression CR
  138          | if_statement
  139          | switch_statement
  140          | while_statement
  141          | for_statement
  142          | do_while_statement
  143          | foreach_statement
  144          | return_statement
  145          | break_statement
  146          | continue_statement
  147          | try_statement
  148          | throw_statement
  149          | declaration_statement
  150          | CR

  151 if_statement: IF expression THEN myblock
  152             | IF expression THEN myblock ELSE myblock
  153             | IF expression THEN myblock elsif_list
  154             | IF expression THEN myblock elsif_list ELSE myblock

  155 elsif_list: elsif
  156           | elsif_list elsif

  157 elsif: ELSIF expression THEN myblock

  158 label_opt: /* empty */
  159          | IDENTIFIER COLON

  160 switch_statement: SWITCH expression CR case_list default_opt

  161 case_list: one_case
  162          | case_list one_case

  163 one_case: CASE case_expression_list myblock

  164 default_opt: /* empty */
  165            | DEFAULT_T myblock

  166 case_expression_list: assignment_expression
  167                     | expression_list COMMA assignment_expression

  168 while_statement: label_opt WHILE expression myblock

  169 for_statement: label_opt FOR expression_opt SEMICOLON expression_opt SEMICOLON expression_opt myblock

  170 do_while_statement: label_opt DO_T block WHILE LP expression RP CR

  171 foreach_statement: label_opt FOREACH LP IDENTIFIER COLON expression RP block

  172 expression_opt: /* empty */
  173               | expression

  174 return_statement: RETURN_T expression_opt CR

  175 identifier_opt: /* empty */
  176               | IDENTIFIER

  177 break_statement: BREAK identifier_opt CR

  178 continue_statement: CONTINUE identifier_opt CR

  179 try_statement: TRY myblock catch_list FINALLY myblock
  180              | TRY myblock FINALLY block
  181              | TRY myblock catch_list

  182 catch_list: catch_clause
  183           | catch_list catch_clause

  184 @2: /* empty */

  185 catch_clause: CATCH @2 type_specifier IDENTIFIER myblock

  186 throw_statement: THROW expression CR
  187                | THROW CR

  188 declaration_statement: DIM IDENTIFIER AS type_specifier CR
  189                      | DIM IDENTIFIER AS type_specifier ASSIGN_T expression CR
  190                      | FINAL IDENTIFIER AS type_specifier CR
  191                      | FINAL IDENTIFIER AS type_specifier ASSIGN_T expression CR

  192 @3: /* empty */

  193 block: LC @3 statement_list RC
  194      | LC RC

  195 $@4: /* empty */

  196 class_definition: class_or_interface IDENTIFIER extends CR $@4 member_declaration_list END

  197 $@5: /* empty */

  198 class_definition: class_or_member_modifier_list class_or_interface IDENTIFIER extends CR $@5 member_declaration_list END

  199 $@6: /* empty */

  200 class_definition: class_or_interface IDENTIFIER extends CR $@6 END

  201 $@7: /* empty */

  202 class_definition: class_or_member_modifier_list class_or_interface IDENTIFIER extends CR $@7 END

  203 class_or_member_modifier_list: class_or_member_modifier
  204                              | class_or_member_modifier_list class_or_member_modifier

  205 class_or_member_modifier: access_modifier
  206                         | VIRTUAL_T
  207                         | OVERRIDE_T
  208                         | ABSTRACT_T

  209 class_or_interface: CLASS_T
  210                   | INTERFACE_T

  211 extends: /* empty */
  212        | COLON extends_list

  213 extends_list: IDENTIFIER
  214             | extends_list COMMA IDENTIFIER

  215 member_declaration_list: member_declaration
  216                        | member_declaration_list member_declaration

  217 member_declaration: method_member
  218                   | field_member

  219 method_member: method_function_definition
  220              | class_or_member_modifier_list method_function_definition
  221              | constructor_definition
  222              | class_or_member_modifier_list constructor_definition

  223 method_function_definition: FUNCTION IDENTIFIER LP parameter_list RP AS type_specifier throws_clause myblock
  224                           | FUNCTION IDENTIFIER LP RP AS type_specifier throws_clause myblock
  225                           | DECLARE FUNCTION IDENTIFIER LP parameter_list RP AS type_specifier throws_clause CR
  226                           | DECLARE FUNCTION IDENTIFIER LP RP AS type_specifier throws_clause CR
  227                           | BSUB IDENTIFIER LP parameter_list RP throws_clause myblock
  228                           | BSUB IDENTIFIER LP RP throws_clause myblock
  229                           | DECLARE BSUB IDENTIFIER LP parameter_list RP throws_clause CR
  230                           | DECLARE BSUB IDENTIFIER LP RP throws_clause CR

  231 apostrophe: /* empty */
  232           | COMMA APOSTROPHE

  233 throws_clause: /* empty */
  234              | THROWS exception_list

  235 exception_list: IDENTIFIER
  236               | exception_list COMMA IDENTIFIER

  237 constructor_definition: CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause myblock
  238                       | CONSTRUCTOR IDENTIFIER LP RP throws_clause myblock
  239                       | DECLARE CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause CR
  240                       | DECLARE CONSTRUCTOR IDENTIFIER LP RP throws_clause CR

  241 access_modifier: PUBLIC_T
  242                | PRIVATE_T

  243 initializer_opt: /* empty */
  244                | ASSIGN_T expression

  245 field_member: DIM IDENTIFIER AS type_specifier initializer_opt CR
  246             | class_or_member_modifier_list IDENTIFIER AS type_specifier initializer_opt CR
  247             | FINAL IDENTIFIER AS type_specifier initializer_opt CR
  248             | class_or_member_modifier_list FINAL IDENTIFIER AS type_specifier initializer_opt CR
  249             | FINAL class_or_member_modifier_list IDENTIFIER AS type_specifier initializer_opt CR

  250 delegate_definition: DELEGATE IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause CR
  251                    | DELEGATE IDENTIFIER LP apostrophe RP AS type_specifier throws_clause CR

  252 enum_definition: ENUM IDENTIFIER LC enumerator_list RC
  253                | ENUM IDENTIFIER LC enumerator_list COMMA RC

  254 enumerator_list: IDENTIFIER
  255                | enumerator_list COMMA IDENTIFIER

  256 const_definition: CONST IDENTIFIER ASSIGN_T expression CR
  257                 | CONST type_specifier IDENTIFIER CR

  258 @8: /* empty */

  259 myblock: CR @8 statement_list END
  260        | CR END


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 108
DOUBLE_LITERAL (259) 109
STRING_LITERAL (260) 110
REGEXP_LITERAL (261) 111
IDENTIFIER (262) 11 12 15 30 32 38 42 43 44 45 46 47 48 49 51 52 99
    102 103 119 120 121 122 159 171 176 185 188 189 190 191 196 198
    200 202 213 214 223 224 225 226 227 228 229 230 235 236 237 238
    239 240 245 246 247 248 249 250 251 252 253 254 255 256 257
AUTOVAR (263) 100
IF (264) 151 152 153 154
ELSE (265) 152 154
ELSIF (266) 157
SWITCH (267) 160
CASE (268) 163
DEFAULT_T (269) 165
WHILE (270) 168 170
DO_T (271) 170
FOR (272) 169
FOREACH (273) 171
RETURN_T (274) 174
BREAK (275) 177
CONTINUE (276) 178
NULL_T (277) 114
LP (278) 42 43 44 45 46 47 48 49 104 105 106 118 119 120 121 122 170
    171 223 224 225 226 227 228 229 230 237 238 239 240 250 251
RP (279) 42 43 44 45 46 47 48 49 104 105 106 118 119 120 121 122 170
    171 223 224 225 226 227 228 229 230 237 238 239 240 250 251
LC (280) 123 124 193 194 252 253
RC (281) 123 124 193 194 252 253
LB (282) 31 32 33 101 102 131 132 133
RB (283) 31 32 33 101 102 131 132 133
SEMICOLON (284) 169
COLON (285) 159 171 212
COMMA (286) 52 54 58 124 136 167 214 232 236 253 255
ASSIGN_T (287) 61 189 191 244 256
LOGICAL_AND (288) 70
LOGICAL_OR (289) 68
EQ (290) 72
NE (291) 73
GT (292) 75
GE (293) 76
LT (294) 77
LE (295) 78
ADD (296) 80
SUB (297) 81 90
MUL (298) 83
DIV (299) 84
MOD (300) 85
BIT_AND (301) 86
BIT_OR (302) 87
BIT_XOR (303) 88
BIT_NOT (304) 92
TRUE_T (305) 112
FALSE_T (306) 113
EXCLAMATION (307) 91
DOT (308) 12 103 121 122
ADD_ASSIGN_T (309) 62
SUB_ASSIGN_T (310) 63
MUL_ASSIGN_T (311) 64
DIV_ASSIGN_T (312) 65
MOD_ASSIGN_T (313) 66
INCREMENT (314) 94
DECREMENT (315) 95
TRY (316) 179 180 181
CATCH (317) 185
FINALLY (318) 179 180
THROW (319) 186 187
THROWS (320) 234
VOID_T (321) 22
BOOLEAN_T (322) 23
INT_T (323) 24
DOUBLE_T (324) 25
STRING_T (325) 26
VARIENT_T (326) 27
NATIVE_POINTER_T (327) 28
NEW (328) 118 119 120 121 122 125 126 127 128
REQUIRE (329) 10
RENAME (330) 15
CLASS_T (331) 209
INTERFACE_T (332) 210
PUBLIC_T (333) 241
PRIVATE_T (334) 242
VIRTUAL_T (335) 206
OVERRIDE_T (336) 207
ABSTRACT_T (337) 208
THIS_T (338) 116
SUPER_T (339) 117
CONSTRUCTOR (340) 237 238 239 240
INSTANCEOF (341) 96
DOWN_CAST_BEGIN (342) 107
DOWN_CAST_END (343) 107
DELEGATE (344) 29 118 250 251
FINAL (345) 190 191 247 248 249
ENUM (346) 252 253
CONST (347) 256 257
FUNCTION (348) 42 43 46 47 223 224 225 226
AS (349) 42 43 46 47 51 52 188 189 190 191 223 224 225 226 245 246
    247 248 249 250 251
THEN (350) 151 152 153 154 157
DIM (351) 188 189 245
END (352) 38 196 198 200 202 259 260
CR (353) 10 15 38 42 43 44 45 137 150 160 170 174 177 178 186 187 188
    189 190 191 196 198 200 202 225 226 229 230 239 240 245 246 247
    248 249 250 251 256 257 259 260
DECLARE (354) 42 43 44 45 225 226 229 230 239 240
BSUB (355) 44 45 48 49 227 228 229 230
APOSTROPHE (356) 232
LIB (357) 38


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
translation_unit (104)
    on left: 1 2, on right: 0 2
initial_declaration (105)
    on left: 3 4 5 6 7, on right: 1
require_list (106)
    on left: 8 9, on right: 4 5 9
require_declaration (107)
    on left: 10, on right: 8 9
package_name (108)
    on left: 11 12, on right: 10 12 15
rename_list (109)
    on left: 13 14, on right: 4 6 14
rename_declaration (110)
    on left: 15, on right: 13 14
definition_or_statement (111)
    on left: 16 17 18 19 20 21, on right: 2
basic_type_specifier (112)
    on left: 22 23 24 25 26 27 28 29, on right: 31 34 125 126
identifier_type_specifier (113)
    on left: 30, on right: 36 127 128
array_type_specifier (114)
    on left: 31 32 33, on right: 33 35
type_specifier (115)
    on left: 34 35 36, on right: 42 43 46 47 51 52 96 107 185 188 189
    190 191 223 224 225 226 245 246 247 248 249 250 251 257
lib_function (116)
    on left: 38, on right: 7
$@1 (117)
    on left: 37, on right: 38
lib_function_declaration_list (118)
    on left: 39 40 41, on right: 38 40 41
function_declaration (119)
    on left: 42 43 44 45, on right: 40 50
function_definition (120)
    on left: 46 47 48 49 50, on right: 16
parameter_list (121)
    on left: 51 52, on right: 42 44 46 48 52 223 225 227 229 237 239
    250
argument_list (122)
    on left: 53 54, on right: 54 104 120 122
statement_list (123)
    on left: 55 56, on right: 56 193 259
expression (124)
    on left: 57 58, on right: 58 101 102 106 131 137 151 152 153 154
    157 160 168 170 171 173 186 189 191 244 256
assignment_expression (125)
    on left: 59 60, on right: 53 54 57 58 60 135 136 166 167
assignment_operator (126)
    on left: 61 62 63 64 65 66, on right: 60
logical_or_expression (127)
    on left: 67 68, on right: 59 68
logical_and_expression (128)
    on left: 69 70, on right: 67 68 70
equality_expression (129)
    on left: 71 72 73, on right: 69 70 72 73
relational_expression (130)
    on left: 74 75 76 77 78, on right: 71 72 73 75 76 77 78
additive_expression (131)
    on left: 79 80 81, on right: 74 75 76 77 78 80 81
multiplicative_expression (132)
    on left: 82 83 84 85 86 87 88, on right: 79 80 81 83 84 85 86 87
    88
unary_expression (133)
    on left: 89 90 91 92, on right: 82 83 84 85 86 87 88 90 91 92
postfix_expression (134)
    on left: 93 94 95 96, on right: 89
primary_expression (135)
    on left: 97 98 99 100, on right: 60 93 94 95 96 103 104 105 107
primary_no_new_array (136)
    on left: 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 122, on right: 97 101
array_literal (137)
    on left: 123 124, on right: 115
array_creation (138)
    on left: 125 126 127 128, on right: 98
dimension_expression_list (139)
    on left: 129 130, on right: 125 126 127 128 130
dimension_expression (140)
    on left: 131, on right: 129 130
dimension_list (141)
    on left: 132 133, on right: 126 128 133
expression_list (142)
    on left: 134 135 136, on right: 123 124 136 167
statement (143)
    on left: 137 138 139 140 141 142 143 144 145 146 147 148 149 150,
    on right: 18 55 56
if_statement (144)
    on left: 151 152 153 154, on right: 138
elsif_list (145)
    on left: 155 156, on right: 153 154 156
elsif (146)
    on left: 157, on right: 155 156
label_opt (147)
    on left: 158 159, on right: 168 169 170 171
switch_statement (148)
    on left: 160, on right: 139
case_list (149)
    on left: 161 162, on right: 160 162
one_case (150)
    on left: 163, on right: 161 162
default_opt (151)
    on left: 164 165, on right: 160
case_expression_list (152)
    on left: 166 167, on right: 163
while_statement (153)
    on left: 168, on right: 140
for_statement (154)
    on left: 169, on right: 141
do_while_statement (155)
    on left: 170, on right: 142
foreach_statement (156)
    on left: 171, on right: 143
expression_opt (157)
    on left: 172 173, on right: 169 174
return_statement (158)
    on left: 174, on right: 144
identifier_opt (159)
    on left: 175 176, on right: 177 178
break_statement (160)
    on left: 177, on right: 145
continue_statement (161)
    on left: 178, on right: 146
try_statement (162)
    on left: 179 180 181, on right: 147
catch_list (163)
    on left: 182 183, on right: 179 181 183
catch_clause (164)
    on left: 185, on right: 182 183
@2 (165)
    on left: 184, on right: 185
throw_statement (166)
    on left: 186 187, on right: 148
declaration_statement (167)
    on left: 188 189 190 191, on right: 149
block (168)
    on left: 193 194, on right: 170 171 180
@3 (169)
    on left: 192, on right: 193
class_definition (170)
    on left: 196 198 200 202, on right: 17 41
$@4 (171)
    on left: 195, on right: 196
$@5 (172)
    on left: 197, on right: 198
$@6 (173)
    on left: 199, on right: 200
$@7 (174)
    on left: 201, on right: 202
class_or_member_modifier_list (175)
    on left: 203 204, on right: 198 202 204 220 222 246 248 249
class_or_member_modifier (176)
    on left: 205 206 207 208, on right: 203 204
class_or_interface (177)
    on left: 209 210, on right: 196 198 200 202
extends (178)
    on left: 211 212, on right: 196 198 200 202
extends_list (179)
    on left: 213 214, on right: 212 214
member_declaration_list (180)
    on left: 215 216, on right: 196 198 216
member_declaration (181)
    on left: 217 218, on right: 215 216
method_member (182)
    on left: 219 220 221 222, on right: 217
method_function_definition (183)
    on left: 223 224 225 226 227 228 229 230, on right: 219 220
apostrophe (184)
    on left: 231 232, on right: 42 43 44 45 46 47 48 49 250 251
throws_clause (185)
    on left: 233 234, on right: 42 43 44 45 46 47 48 49 223 224 225
    226 227 228 229 230 237 238 239 240 250 251
exception_list (186)
    on left: 235 236, on right: 234 236
constructor_definition (187)
    on left: 237 238 239 240, on right: 221 222
access_modifier (188)
    on left: 241 242, on right: 205
initializer_opt (189)
    on left: 243 244, on right: 245 246 247 248 249
field_member (190)
    on left: 245 246 247 248 249, on right: 218
delegate_definition (191)
    on left: 250 251, on right: 19
enum_definition (192)
    on left: 252 253, on right: 20
enumerator_list (193)
    on left: 254 255, on right: 252 253 255
const_definition (194)
    on left: 256 257, on right: 21
myblock (195)
    on left: 259 260, on right: 46 47 48 49 151 152 153 154 157 163
    165 168 169 179 180 181 185 223 224 227 228 237 238
@8 (196)
    on left: 258, on right: 259


state 0

    0 $accept: . translation_unit $end

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2
    LIB      shift, and go to state 3

    $default  reduce using rule 3 (initial_declaration)

    translation_unit     go to state 4
    initial_declaration  go to state 5
    require_list         go to state 6
    require_declaration  go to state 7
    rename_list          go to state 8
    rename_declaration   go to state 9
    lib_function         go to state 10


state 1

   10 require_declaration: REQUIRE . package_name CR

    IDENTIFIER  shift, and go to state 11

    package_name  go to state 12


state 2

   15 rename_declaration: RENAME . package_name IDENTIFIER CR

    IDENTIFIER  shift, and go to state 11

    package_name  go to state 13


state 3

   38 lib_function: LIB . IDENTIFIER $@1 CR lib_function_declaration_list END

    IDENTIFIER  shift, and go to state 14


state 4

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end            shift, and go to state 15
    INT_LITERAL     shift, and go to state 16
    DOUBLE_LITERAL  shift, and go to state 17
    STRING_LITERAL  shift, and go to state 18
    REGEXP_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 20
    AUTOVAR         shift, and go to state 21
    IF              shift, and go to state 22
    SWITCH          shift, and go to state 23
    RETURN_T        shift, and go to state 24
    BREAK           shift, and go to state 25
    CONTINUE        shift, and go to state 26
    NULL_T          shift, and go to state 27
    LP              shift, and go to state 28
    LC              shift, and go to state 29
    SUB             shift, and go to state 30
    BIT_NOT         shift, and go to state 31
    TRUE_T          shift, and go to state 32
    FALSE_T         shift, and go to state 33
    EXCLAMATION     shift, and go to state 34
    TRY             shift, and go to state 35
    THROW           shift, and go to state 36
    NEW             shift, and go to state 37
    CLASS_T         shift, and go to state 38
    INTERFACE_T     shift, and go to state 39
    PUBLIC_T        shift, and go to state 40
    PRIVATE_T       shift, and go to state 41
    VIRTUAL_T       shift, and go to state 42
    OVERRIDE_T      shift, and go to state 43
    ABSTRACT_T      shift, and go to state 44
    THIS_T          shift, and go to state 45
    SUPER_T         shift, and go to state 46
    DELEGATE        shift, and go to state 47
    FINAL           shift, and go to state 48
    ENUM            shift, and go to state 49
    CONST           shift, and go to state 50
    FUNCTION        shift, and go to state 51
    DIM             shift, and go to state 52
    CR              shift, and go to state 53
    DECLARE         shift, and go to state 54
    BSUB            shift, and go to state 55

    $default  reduce using rule 158 (label_opt)

    definition_or_statement        go to state 56
    function_declaration           go to state 57
    function_definition            go to state 58
    expression                     go to state 59
    assignment_expression          go to state 60
    logical_or_expression          go to state 61
    logical_and_expression         go to state 62
    equality_expression            go to state 63
    relational_expression          go to state 64
    additive_expression            go to state 65
    multiplicative_expression      go to state 66
    unary_expression               go to state 67
    postfix_expression             go to state 68
    primary_expression             go to state 69
    primary_no_new_array           go to state 70
    array_literal                  go to state 71
    array_creation                 go to state 72
    statement                      go to state 73
    if_statement                   go to state 74
    label_opt                      go to state 75
    switch_statement               go to state 76
    while_statement                go to state 77
    for_statement                  go to state 78
    do_while_statement             go to state 79
    foreach_statement              go to state 80
    return_statement               go to state 81
    break_statement                go to state 82
    continue_statement             go to state 83
    try_statement                  go to state 84
    throw_statement                go to state 85
    declaration_statement          go to state 86
    class_definition               go to state 87
    class_or_member_modifier_list  go to state 88
    class_or_member_modifier       go to state 89
    class_or_interface             go to state 90
    access_modifier                go to state 91
    delegate_definition            go to state 92
    enum_definition                go to state 93
    const_definition               go to state 94


state 5

    1 translation_unit: initial_declaration .

    $default  reduce using rule 1 (translation_unit)


state 6

    4 initial_declaration: require_list . rename_list
    5                    | require_list .
    9 require_list: require_list . require_declaration

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2

    $default  reduce using rule 5 (initial_declaration)

    require_declaration  go to state 95
    rename_list          go to state 96
    rename_declaration   go to state 9


state 7

    8 require_list: require_declaration .

    $default  reduce using rule 8 (require_list)


state 8

    6 initial_declaration: rename_list .
   14 rename_list: rename_list . rename_declaration

    RENAME  shift, and go to state 2

    $default  reduce using rule 6 (initial_declaration)

    rename_declaration  go to state 97


state 9

   13 rename_list: rename_declaration .

    $default  reduce using rule 13 (rename_list)


state 10

    7 initial_declaration: lib_function .

    $default  reduce using rule 7 (initial_declaration)


state 11

   11 package_name: IDENTIFIER .

    $default  reduce using rule 11 (package_name)


state 12

   10 require_declaration: REQUIRE package_name . CR
   12 package_name: package_name . DOT IDENTIFIER

    DOT  shift, and go to state 98
    CR   shift, and go to state 99


state 13

   12 package_name: package_name . DOT IDENTIFIER
   15 rename_declaration: RENAME package_name . IDENTIFIER CR

    IDENTIFIER  shift, and go to state 100
    DOT         shift, and go to state 98


state 14

   38 lib_function: LIB IDENTIFIER . $@1 CR lib_function_declaration_list END

    $default  reduce using rule 37 ($@1)

    $@1  go to state 101


state 15

    0 $accept: translation_unit $end .

    $default  accept


state 16

  108 primary_no_new_array: INT_LITERAL .

    $default  reduce using rule 108 (primary_no_new_array)


state 17

  109 primary_no_new_array: DOUBLE_LITERAL .

    $default  reduce using rule 109 (primary_no_new_array)


state 18

  110 primary_no_new_array: STRING_LITERAL .

    $default  reduce using rule 110 (primary_no_new_array)


state 19

  111 primary_no_new_array: REGEXP_LITERAL .

    $default  reduce using rule 111 (primary_no_new_array)


state 20

   99 primary_expression: IDENTIFIER .
  102 primary_no_new_array: IDENTIFIER . LB expression RB
  159 label_opt: IDENTIFIER . COLON

    LB     shift, and go to state 102
    COLON  shift, and go to state 103

    $default  reduce using rule 99 (primary_expression)


state 21

  100 primary_expression: AUTOVAR .

    $default  reduce using rule 100 (primary_expression)


state 22

  151 if_statement: IF . expression THEN myblock
  152             | IF . expression THEN myblock ELSE myblock
  153             | IF . expression THEN myblock elsif_list
  154             | IF . expression THEN myblock elsif_list ELSE myblock

    INT_LITERAL     shift, and go to state 16
    DOUBLE_LITERAL  shift, and go to state 17
    STRING_LITERAL  shift, and go to state 18
    REGEXP_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 104
    AUTOVAR         shift, and go to state 21
    NULL_T          shift, and go to state 27
    LP              shift, and go to state 28
    LC              shift, and go to state 29
    SUB             shift, and go to state 30
    BIT_NOT         shift, and go to state 31
    TRUE_T          shift, and go to state 32
    FALSE_T         shift, and go to state 33
    EXCLAMATION     shift, and go to state 34
    NEW             shift, and go to state 37
    THIS_T          shift, and go to state 45
    SUPER_T         shift, and go to state 46

    expression                 go to state 105
    assignment_expression      go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    unary_expression           go to state 67
    postfix_expression         go to state 68
    primary_expression         go to state 69
    primary_no_new_array       go to state 70
    array_literal              go to state 71
    array_creation             go to state 72


state 23

  160 switch_statement: SWITCH . expression CR case_list default_opt

    INT_LITERAL     shift, and go to state 16
    DOUBLE_LITERAL  shift, and go to state 17
    STRING_LITERAL  shift, and go to state 18
    REGEXP_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 104
    AUTOVAR         shift, and go to state 21
    NULL_T          shift, and go to state 27
    LP              shift, and go to state 28
    LC              shift, and go to state 29
    SUB             shift, and go to state 30
    BIT_NOT         shift, and go to state 31
    TRUE_T          shift, and go to state 32
    FALSE_T         shift, and go to state 33
    EXCLAMATION     shift, and go to state 34
    NEW             shift, and go to state 37
    THIS_T          shift, and go to state 45
    SUPER_T         shift, and go to state 46

    expression                 go to state 106
    assignment_expression      go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    unary_expression           go to state 67
    postfix_expression         go to state 68
    primary_expression         go to state 69
    primary_no_new_array       go to state 70
    array_literal              go to state 71
    array_creation             go to state 72


state 24

  174 return_statement: RETURN_T . expression_opt CR

    INT_LITERAL     shift, and go to state 16
    DOUBLE_LITERAL  shift, and go to state 17
    STRING_LITERAL  shift, and go to state 18
    REGEXP_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 104
    AUTOVAR         shift, and go to state 21
    NULL_T          shift, and go to state 27
    LP              shift, and go to state 28
    LC              shift, and go to state 29
    SUB             shift, and go to state 30
    BIT_NOT         shift, and go to state 31
    TRUE_T          shift, and go to state 32
    FALSE_T         shift, and go to state 33
    EXCLAMATION     shift, and go to state 34
    NEW             shift, and go to state 37
    THIS_T          shift, and go to state 45
    SUPER_T         shift, and go to state 46

    $default  reduce using rule 172 (expression_opt)

    expression                 go to state 107
    assignment_expression      go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    unary_expression           go to state 67
    postfix_expression         go to state 68
    primary_expression         go to state 69
    primary_no_new_array       go to state 70
    array_literal              go to state 71
    array_creation             go to state 72
    expression_opt             go to state 108


state 25

  177 break_statement: BREAK . identifier_opt CR

    IDENTIFIER  shift, and go to state 109

    $default  reduce using rule 175 (identifier_opt)

    identifier_opt  go to state 110


state 26

  178 continue_statement: CONTINUE . identifier_opt CR

    IDENTIFIER  shift, and go to state 109

    $default  reduce using rule 175 (identifier_opt)

    identifier_opt  go to state 111


state 27

  114 primary_no_new_array: NULL_T .

    $default  reduce using rule 114 (primary_no_new_array)


state 28

  106 primary_no_new_array: LP . expression RP
